--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c2l",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "./index.js",
   "preferGlobal": "true",
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/yuwancumian/c2l",
   "dependencies": {
     "cac": "^4.2.4",
+    "chalk": "^2.3.0",
     "fs-extra": "^4.0.2",
+    "ora": "^1.3.0",
     "request": "^2.83.0"
   }
 }
