--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "c2l",
   "version": "0.0.2",
   "description": "",
-  "main": "./index.js",
+  "main": "./bin/c2l",
   "preferGlobal": "true",
   "bin": {
     "c2l": "./bin/c2l.js"
@@ -28,7 +28,10 @@
     "cac": "^4.2.4",
     "chalk": "^2.3.0",
     "fs-extra": "^4.0.2",
+    "node-fetch": "^1.7.3",
     "ora": "^1.3.0",
-    "request": "^2.83.0"
+    "pkg-dir": "^2.0.0",
+    "request": "^2.83.0",
+    "superagent": "^3.8.2"
   }
 }
